--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 form{
+    
     text-align: center;
     font-weight: bold;
 }
@@ -6,4 +7,18 @@ form{
 body {
     background: url(https://images.pexels.com/photos/19670/pexels-photo.jpg);
     background-size:cover;
+}
+
+#imagen{
+    height: 60px;
+    width: 350px;
+    /* background-color: red; */
+    padding: 3px;
+    margin: 3px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* min-height: 20vh; */
 }
